--- a/PsyCoderWechat/Views/Home/demo.cshtml
+++ b/PsyCoderWechat/Views/Home/demo.cshtml
@@ -11,6 +11,9 @@
 </section>
 <!-- Main content -->
 <section class="content">
+    @ViewBag.imagepath <br/>
+    @ViewBag.textimagepath<br/>
+    @ViewBag.texttoimagepath
     <!-- Your Page Content Here -->
 </section>
 <!-- /.content -->
