--- a/PsyCoderWechat/Resource/Css/WechatStyle.css
+++ b/PsyCoderWechat/Resource/Css/WechatStyle.css
@@ -11,32 +11,6 @@ h1 {
 }
 
 
-/**
-  *放置input的div盒子
-  *1.此处应我的项目需要，加了些特别的设置，如字体、背景色等，按需添加；
-  *2.内层input不加边框，看起来效果会自然一点，所以外层div设置了边框和圆角
-*/
-.box{
-    background-color: #ffffff;
-    border: 1px solid #eeeeee;
-    border-radius: 6px;
-    font-size: 14px;
-    text-align: center;
-}
-
-/**
-  *label标签样式 放在.box下，不至于影响其他的label
-  *采取绝对定位，位置根据需求确定
-*/
-.box label{
-    z-index: 2;
-    position: absolute;
-    left: 50%;
-    margin-left: -8%;
-    color: #B2B2B2;
-    top: 4.8rem;
-    font-weight: normal;
-}
 
 
 
@@ -139,4 +113,27 @@ h1 {
   font-family: FontAwesome;
   font-size: 16px;
   color: #cccccc;
+}
+
+.banner {
+    margin-top:60px;
+    width:100%;
+    height:150px;
+    background-color:#ffd800;
+}
+
+
+.pro_list {
+    width:100%;
+    background-color:#333333;
+}
+
+
+.pro_list .proimg img {
+    margin:0px 0px 0px 0px;
+    margin:5px 2px 2px 2px ;
+    border-radius:5px;
+    width:50%;
+    height:150px;
+
 }
