--- a/PsyCoderWechat/Resource/Css/WechatStyle.css
+++ b/PsyCoderWechat/Resource/Css/WechatStyle.css
@@ -134,6 +134,7 @@ h1 {
     width:100%;
     height:30px;
     color:#999999;
+    border-bottom:1px solid #E5E5E5;
 
 }
  .prolist   .prolisttitle h3 {
@@ -141,11 +142,13 @@ h1 {
          margin:0px 0px;
         padding-left:10px;
         line-height:30px;
-        font-size:1.2em;
+        font-size:1.0em;
         float:left;
     }
 
   .prolist   .prolisttitle h3 a {
+         text-decoration:none;
+         color:#999999;
          display:block;
     }
 .proimg {
