--- a/PsyCoderWechat/Views/Shared/_MenuPartial.cshtml
+++ b/PsyCoderWechat/Views/Shared/_MenuPartial.cshtml
@@ -1,21 +1,20 @@
 ﻿<aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-        <!-- Sidebar user panel (optional) -->
+        <!-- Sidebar user panel -->
         <div class="user-panel">
             <div class="pull-left image">
-                <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Alexander Pierce</p>
-                <!-- Status -->
-                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                <p>赵征</p>
+                <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
             </div>
         </div>
-        <!-- search form (Optional) -->
+        <!-- search form -->
         <form action="#" method="get" class="sidebar-form">
             <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search...">
+                <input type="text" name="q" class="form-control" placeholder="搜索...">
                 <span class="input-group-btn">
                     <button type="submit" name="search" id="search-btn" class="btn btn-flat">
                         <i class="fa fa-search"></i>
@@ -24,53 +23,29 @@
             </div>
         </form>
         <!-- /.search form -->
-        <!-- Sidebar Menu -->
+        <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
-            <li class="header">HEADER</li>
-            <!-- Optionally, you can add icons to the links -->
-            <li class="active"><a href="#"><i class="fa fa-link"></i> <span>首页</span></a></li>
-            <li><a href="#"><i class="fa fa-link"></i> <span>发送消息</span></a></li>
+            <li class="header">主菜单</li>
+            <li><a href="@Url.Action("Index","Home")"><i class="fa fa-home"></i> <span>主页</span></a></li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-link"></i> <span>微信菜单</span>
+                    <i class="fa fa-edit"></i> <span>微信服务</span>
                     <span class="pull-right-container">
                         <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="@Url.Action("CreateWechatMenu","WechatMenu")">创建微信菜单</a></li>
-                    <li><a href="@Url.Action("GetWechatMenu","WechatMenu")">查询微信菜单</a></li>
-                    <li><a href="@Url.Action("DeleteWechatMenu","WechatMenu")" onclick="return confirm('你确定要删除微信菜单吗？');">删除微信菜单</a></li>
+                    <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> 微信菜单</a></li>
+                    <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> 消息发送</a></li>
+                    <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> 素材管理</a></li>
                 </ul>
             </li>
-            <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-link"></i> <span>消息管理</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li><a href="#">发送消息</a></li>
-                    <li><a href="#">自动回复</a></li>
-                    <li><a href="#">关注回复</a></li>
-                </ul>
-            </li>
-            <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-link"></i> <span>微信设置</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li><a href="#">更新Tocken</a></li>
-                    <li><a href="#">查询菜单</a></li>
-                    <li><a href="#">删除菜单</a></li>
-                </ul>
-            </li>
+
+            <li class="header">系统设置</li>
+            <li><a href="@Url.Action("Setting","Wechat")"><i class="fa fa-user-circle text-red"></i> <span>用户设置</span></a></li>
+            <li><a href="@Url.Action("Setting","Wechat")"><i class="fa fa-wechat text-yellow"></i> <span>微信设置</span></a></li>
+            <li><a href="@Url.Action("Setting","Wechat")"><i class="fa fa-apple text-aqua"></i> <span>其他设置</span></a></li>
         </ul>
-        <!-- /.sidebar-menu -->
     </section>
     <!-- /.sidebar -->
 </aside>
